Fix navbar misalignment in FF.

--- a/_src/_sass/main.scss
+++ b/_src/_sass/main.scss
@@ -21,5 +21,5 @@ footer {
 }
 
 .nojs .navbar-menu {
-  display: block;
+  display: flex;
 }
